# professor-rs

./: .gitignore  CLAUDE.md  Cargo.toml  MEMORY.txt  README.md
.claude/: settings.json
.claude/skills/cargo/: SKILL.md
.claude/skills/preflight/: SKILL.md
.claude/skills/preflight/specialists/: api-surface.md  async-runtime.md  refactoring.md  test-strategy.md
.claude/skills/rust-audit/: SKILL.md  checklist.md
.claude/skills/rust-polish/: SKILL.md
.claude/skills/sanity/: SKILL.md
event/: pokemon.txt  trainer.txt  type.txt
professor-rs/: .gitignore  Cargo.toml
professor-rs/src/: main.rs
reference/: bad_fortunes.txt  d20.txt  data.txt  good_fortunes.txt  help.txt  meme.txt  ponder.txt  pong.txt
src/: api.rs  basic.rs  clips.rs  data.rs  event.rs  gpt.rs  helper.rs  llm.rs  main.rs  mods.rs  options.rs  poke_battle.rs  poke_helper.rs  poke_wishing.rs  pokemon.rs  professor.rs  reminder.rs  stock.rs  trader.rs  web.rs
src/basic/: economy.rs  leaderboard.rs  mod.rs
src/options/: engine.rs  long.rs  mod.rs  quote.rs  short.rs
src/stock/: mod.rs  modals.rs  orders.rs  search.rs
src/trader/: engine.rs  mod.rs  portfolio.rs  trades.rs  watchlist.rs
tools/: rotate_d20.py
