[package]
name = "professor-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = {version = "0.6.1", features=["cache"]}
#poise = { path = "../poise-0.6.1" }
#poise = {git = "https://github.com/kangalioo/poise", features=["collector"]}

tokio = { version ="1.4.0", features = ["rt-multi-thread", "macros"] }

tracing = "0.1.37"
dotenv = "0.15.0"
chrono = "0.4.31"
serde = { version = "*", features = ["rc"] }
serde_json = "1.0"
rand = "*"

openai-api-rs = "4.0.0"
regex = "1"

dashmap = { version = "5.5.3", features = ["serde"] }