[package]
name = "professor-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = {version = "0.6.1", features=["cache", "collector"]}
tokio = { version ="1.39.3", features = ["rt-multi-thread", "macros"] }

tracing = "0.1.37"
dotenv = "0.15.0"
chrono = "0.4.31"
serde = { version = "*", features = ["rc"] }
serde_json = "1.0.127"
rand = "*"

openai-api-rs = "5.0.6"
regex = "1.10.6"

dashmap = { version = "6.0.1", features = ["serde"] }