[package]
name = "professor-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = { version = "0.6.1", features = ["cache", "collector"] }
tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros"] }

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
dotenvy = "0.15"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1", features = ["rc"] }
serde_json = "1.0.127"
rand = "0.8"

regex = "1.10.6"
reqwest = { version = "0.12", features = ["json"] }

dashmap = { version = "6.0.1", features = ["serde"] }

openssl-sys = "0.9"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
