[package]
name = "professor-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poise = { path = "../../poise" }
#poise = {git = "https://github.com/kangalioo/poise", features=["collector"]}

tokio = { version ="1.35.1", features = ["rt-multi-thread", "macros"] }
